remove author name and change tab name

--- a/blog-grid.html
+++ b/blog-grid.html
@@ -6,11 +6,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Homelengo - Real Estate HTML Template</title>
+    <title>Emekli TV</title>
     <meta name="keywords" content="HTML, CSS, JavaScript, Bootstrap">
     <meta name="description" content="Real Estate HTML Template">
 
-    <meta name="author" content="themesflat.com">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
    <!-- font -->
@@ -473,7 +472,7 @@
                 <div class="bottom-footer">
                   <div class="container">
                     <div class="content-footer-bottom">
-                        <div class="copyright">©2024 Homelengo. All Rights Reserved.</div>
+                        <div class="copyright">©2024 Emekli TV. All Rights Reserved.</div>
                           
                         <ul class="menu-bottom">
                           <li><a href="our-service.html">Terms Of Services</a> </li>
