--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Homelengo - Real Estate HTML Template</title>
+    <title>Emekli TV</title>
     <meta name="keywords" content="HTML, CSS, JavaScript, Bootstrap">
     <meta name="description" content="Real Estate HTML Template">
 
-    <meta name="author" content="themesflat.com">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
    <!-- font -->
@@ -335,25 +334,6 @@
                 </div>
             </section>
             <!-- /faq -->
-            <!-- banner -->
-            <section class="flat-section pt-0 flat-banner wow fadeInUpSmall" data-wow-delay=".2s" data-wow-duration="2000ms">
-                <div class="container">
-                    <div class="wrap-banner bg-primary-new">
-                        <div class="box-left">
-                            <div class="box-title">
-                                <div class="text-subtitle text-primary">Become Partners</div>
-                                <h3 class="mt-4 fw-8">List your Properties on Homelengo, join Us Now!</h3>
-                            </div>
-                            <a href="contact.html" class="tf-btn btn-view primary size-1 hover-btn-view">Become A Hosting <span class="icon icon-arrow-right2"></span></a>
-                        </div>
-                        <div class="box-right">
-                            <img src="images/banner/banner.png" alt="image">
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- end banner -->
-
             <!-- footer -->
             <footer class="footer">
                 <div class="top-footer">
@@ -482,7 +462,7 @@
                 <div class="bottom-footer">
                   <div class="container">
                     <div class="content-footer-bottom">
-                        <div class="copyright">©2024 Homelengo. All Rights Reserved.</div>
+                        <div class="copyright">©2024 Emekli TV. All Rights Reserved.</div>
                           
                         <ul class="menu-bottom">
                           <li><a href="our-service.html">Terms Of Services</a> </li>
