--- a/message.html
+++ b/message.html
@@ -6,11 +6,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Homelengo - Real Estate HTML Template</title>
+    <title>Emekli TV</title>
     <meta name="keywords" content="HTML, CSS, JavaScript, Bootstrap">
     <meta name="description" content="Real Estate HTML Template">
 
-    <meta name="author" content="themesflat.com">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
    <!-- font -->
@@ -382,7 +381,7 @@
                         </div>
                     </div>
                     <div class="footer-dashboard footer-dashboard-2">
-                        <p>Copyright © 2024 Home Lengo</p>
+                        <p>Copyright © 2024 Emekli TV</p>
                     </div>
                 </div>
 
